--- a/index.html
+++ b/index.html
@@ -4,13 +4,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1", "maximum-scale=1">
   <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
   <script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
-  <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
-
-  <script type='text/javascript' src='triangle.js'> </script>
   <script type='text/javascript' src="index.js"> </script>
 </head>
 
 <body>
+  <img src="img/background.png" id="background" style="display:none"/>
   <canvas id="canvas" width="1600px" height="1000px"/>
 </body>
 
