--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <title> Shape Wars: The perfect circle </title>
   <meta name="viewport" content="width=device-width, initial-scale=1", "maximum-scale=1">
   <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
-  <script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
+  <script type="text/javascript" src="lib/jquery-2.2.0.js"></script>
   <script type='text/javascript' src="index.js"> </script>
 </head>
 
