--- a/index.html
+++ b/index.html
@@ -5,11 +5,17 @@
   <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
   <script type="text/javascript" src="lib/jquery-2.2.0.js"></script>
   <script type='text/javascript' src="index.js"> </script>
+  <script type='text/javascript' src="powerup.js"> </script>
 </head>
 
 <body>
-  <img src="img/background.png" id="background" style="display:none"/>
-  <canvas id="canvas" width="1600px" height="1000px"/>
+    <canvas id="canvas" width="1600px" height="1000px"/>
+
+  <!-- Resources -->
+  <div style="display:none">
+    <img id="background" src="img/background.png" />
+    <img id="SpeedPowerup" src="img/speed_powerup.svg" />
+  </div>
 </body>
 
 
