--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
 </head>
 
 <body>
-    <canvas id="canvas" width="1600px" height="1000px"/>
-
+    <canvas id="canvas" width="1600px" height="1000px"/></canvas>
   <!-- Resources -->
   <div style="display:none">
     <img id="background" src="img/background.png" />
     <img id="SpeedPowerup" src="img/speed_powerup.svg" />
+    <img id="HealthPowerup" src="img/health_powerup.svg" />
+
   </div>
 </body>
 
